fix: remove extra margin under multiline input

--- a/src/site/components/Input/Input.module.css
+++ b/src/site/components/Input/Input.module.css
@@ -16,3 +16,7 @@ input::selection {
   background: var(--color-background);
   color: var(--color-text-selected-input);
 }
+
+.textarea {
+  display: block;
+}
